refactoring : countstate en menustate